HW-8 done extra changes done