@@ -4,7 +4,10 @@ import lombok.Builder;
 import lombok.Getter;
 import lombok.Setter;
 
+import java.util.Arrays;
+import java.util.Comparator;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -81,8 +84,46 @@ public class TaskApplication {
         );
     }
 
-    List<MyTask> getMyTaskList() {
-        return getMyTaskStream().collect(Collectors.toList());
+    List<MyTask> myTaskList = getMyTaskStream().toList();
+
+    public List<MyTask> myTasksInWork() {
+        return myTaskList.stream()
+                .filter(myTask -> myTask.status.equals(Status.INWORK))
+                .toList();
+    }
+
+    public Long closedTasksQuantity() {
+        return myTaskList.stream()
+                .filter(myTask -> myTask.status.equals(Status.CLOSED))
+                .count();
+    }
+
+    public List<Boolean> ifTaskExist() {
+        boolean taskId2Exist = myTaskList.stream()
+                .anyMatch(myTask -> myTask.getId() == 2);
+        boolean taskId99NotExist = myTaskList.stream()
+                .noneMatch(myTask -> myTask.getId() == 99);
+        return Arrays.asList(taskId2Exist, taskId99NotExist);
+    }
+
+    public List<TaskApplication.MyTask> myTaskSortedList() {
+        return myTaskList.stream()
+                .sorted(Comparator.comparing(myTask -> myTask.status))
+                .toList();
+    }
+
+    public Map<Status, Map<String, List<MyTask>>> tasksGroupedByStatusAndId() {
+        return myTaskList.stream()
+                .collect(Collectors.groupingBy(TaskApplication.MyTask::getStatus,
+                        Collectors.groupingBy(myTask -> {
+                            myTask.setParity();
+                            return myTask.getParity();
+                        })));
+    }
+
+    public Map<Boolean, List<TaskApplication.MyTask>> tasksDividedByStatus() {
+        return myTaskList.stream()
+                .collect(Collectors.partitioningBy(myTask -> myTask.status.equals(Status.CLOSED)));
     }
 
 }
